<!--
  ~    Copyright 2019 AniTrend
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">CrunchyTrend</string>

    <string name="nav_header_customization">Customization</string>
    <string name="nav_header_navigation">Navigation</string>
    <string name="nav_theme">Theme</string>

    <string name="nav_header_support">Support</string>
    <string name="nav_contact">Contact</string>

    <string name="nav_show_latest">Latest Shows</string>
    <string name="nav_show_news">Show News</string>

    <string name="action_search">Search</string>

    <string name="action_retry">Reload</string>


    <string name="app_banner_text">CrunchyTrend - All Rights Reserved.</string>

    <!-- Settings for Notifications -->


    <!-- Settings for Data & Sync &amp; is the html equivalent of &-->

    <string name="Loading">Loading</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_later">Later</string>

    <!--These are the actual value of the titles above, obviously no translation required here-->
</resources>
